infrastructure/devops/event-driven/kubeelasti/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: target
  labels:
    agentpool: spot
  annotations:
    kustomize.toolkit.fluxcd.io/reconcile: disabled
