infrastructure/devops/event-driven/kubeelasti/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-deployment
  namespace: target
  annotations:
    kustomize.toolkit.fluxcd.io/reconcile: disabled
spec:
  type: ClusterIP
  selector:
    app: target-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
